--- a/presale.html
+++ b/presale.html
@@ -29,7 +29,7 @@
                             <h1 class="text-center"><span><strong>0.00000000</strong><br></span></h1>
                             <h6 class="text-center"><strong>Buyprice</strong>&nbsp;<span><strong>500Trx per 1 DMH</strong><br></span></h6>
                             <h6 class="text-center"><strong>DMH Remaining&nbsp;</strong><span id="available"><strong>0.00000000</strong><br></span></h6>
-                            <p class="text-center" style="margin-bottom: 19px;"><input type="text" class="inputBuy text-center"  name="TRONTOINPUT" style="height: 44px;padding-top: 0px;"><button class="btn btn-primary button" type="button" style="height: 44px;margin-left: 5px;"><strong>Buy</strong></button></p>
+                            <p class="text-center" style="margin-bottom: 19px;"><input type="text" class="inputBuy text-center"  name="TRONTOINPUT" style="height: 44px;padding-top: 0px;"><button onclick="invest()" class="btn btn-primary button" type="button" style="height: 44px;margin-left: 5px;"><strong>Buy</strong></button></p>
                             <p class="text-center"></p>
                         </div>
                     </div>
