--- a/presale.html
+++ b/presale.html
@@ -26,10 +26,11 @@
                     <div class="card">
                         <div class="card-body">
                             <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 52px;"><br></h1>
-                            <h1 class="text-center"><span><strong>0.00000000</strong><br></span></h1>
+                            <h1 class="text-center">Your DMH balance<span id="balof"><strong>0.00000000</strong><br></span></h1>
                             <h6 class="text-center"><strong>Price 1 DMH</strong>&nbsp;<span id="price"><strong>X</strong><br></span></h6>
                             <h6 class="text-center"><strong>DMH Remaining&nbsp;</strong><span id="available"><strong>0.00000000</strong><br></span></h6>
                             <p class="text-center" style="margin-bottom: 19px;"><input type="text" name="ETH" class="inputBuy text-center" style="height: 44px;padding-top: 0px;"><button onclick="invest()" class="btn btn-primary button" type="button" style="height: 44px;margin-left: 5px;"><strong>Buy</strong></button></p>
+			    <h6 class="text-center"><strong>Cap is 500tokens per user&nbsp;</strong><br></span></h6>
                             <p class="text-center"></p>
                         </div>
                     </div>
@@ -66,7 +67,7 @@ function round(num) {
   
 
 var contractAddress='TRe5fpw9bXBfQHsffMuj6ATeHPzLZH4wZG';
-
+var contractAddress2='TCWNxYuAYvUdc5ut33DEfNgTqN5mo5489A';
 
 
   var toinvest=0;
@@ -80,8 +81,11 @@ async function start() {
 started=1;
   
 let MyContract = await tronWeb.contract().at(contractAddress);
- 
+let token = await tronWeb.contract().at(contractAddress2);
 
+	
+  let _balof= await MyContract.balanceOf(myaddress, ).call(); 
+    document.getElementById("balof").innerHTML=roundToFour(_price/1000000);
   
    
   let _price= await MyContract.tokenPrice().call(); 
@@ -89,8 +93,8 @@ let MyContract = await tronWeb.contract().at(contractAddress);
 
   
   
-  let _candybalance= await MyContract.getTokenBalance().call(); 
-    document.getElementById("available").innerHTML=roundToTwo(_candybalance/1000000000000000000);
+  let _matterbalance= await MyContract.getTokenBalance().call(); 
+    document.getElementById("available").innerHTML=roundToTwo(_matterbalance/1000000000000000000);
 
 
  
