--- a/presale.html
+++ b/presale.html
@@ -26,7 +26,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 52px;"><br></h1>
-                            <h1 class="text-center">Your DMH balance<span id="balof"><strong>0.00000000</strong><br></span></h1>
+                            <h1 class="text-center">Your DMH balance <span id="balof"><strong>0.00000000</strong><br></span></h1>
                             <h6 class="text-center"><strong>Price 1 DMH</strong>&nbsp;<span id="price"><strong>X</strong><br></span></h6>
                             <h6 class="text-center"><strong>DMH Remaining&nbsp;</strong><span id="available"><strong>0.00000000</strong><br></span></h6>
                             <p class="text-center" style="margin-bottom: 19px;"><input type="text" name="ETH" class="inputBuy text-center" style="height: 44px;padding-top: 0px;"><button onclick="invest()" class="btn btn-primary button" type="button" style="height: 44px;margin-left: 5px;"><strong>Buy</strong></button></p>
@@ -85,7 +85,7 @@ let Token = await tronWeb.contract().at(contractAddress2);
 
 	
   let _balof= await Token.balanceOf(myaddress).call(); 
-    document.getElementById("balof").innerHTML=roundToFour(_balof/1000000000000);
+    document.getElementById("balof").innerHTML=roundToFour(_balof*1000000000000);
   
    
   let _price= await MyContract.tokenPrice().call(); 
