--- a/presale.html
+++ b/presale.html
@@ -30,7 +30,7 @@
                             <h6 class="text-center"><strong>Price 1 DMH</strong>&nbsp;<span id="price"><strong>X</strong><br></span></h6>
                             <h6 class="text-center"><strong>DMH Remaining&nbsp;</strong><span id="available"><strong>0.00000000</strong><br></span></h6>
                             <p class="text-center" style="margin-bottom: 19px;"><input type="text" name="ETH" class="inputBuy text-center" style="height: 44px;padding-top: 0px;"><button onclick="invest()" class="btn btn-primary button" type="button" style="height: 44px;margin-left: 5px;"><strong>Buy</strong></button></p>
-			    <h6 class="text-center"><strong>Cap is 500tokens per user&nbsp;</strong><br></span></h6>
+			    <h6 class="text-center"><strong>Cap is at 500DMH per person &nbsp;</strong><br></span></h6>
                             <p class="text-center"></p>
                         </div>
                     </div>
