--- a/PearlStake.html
+++ b/PearlStake.html
@@ -30,21 +30,21 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="display-4 text-center card-title">🔮<br></h1>
-                            <h1 class="text-center"><span><strong>0.00000000</strong><br></span></h1>
-                            <p class="text-center" style="margin-bottom: 46px;"><strong>PEARL </strong>Earned so far</p>
-                            <p class="text-center"><button class="btn btn-primary button" type="button" style="height: 45px;"><strong>Harvest</strong></button></p>
+                            <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 52px;"><br></h1>
+                            <h1 class="text-center"><span><strong id="rewards">0.00000000</strong><br></span></h1>
+                            <p class="text-center" style="margin-bottom: 46px;"><strong>DHM </strong>Earned so far</p>
+                            <p class="text-center"><button id="harvest" class="btn btn-primary button" type="button" style="height: 45px;"><strong>Harvest</strong></button></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 52px;"><br></h1>
-                            <h1 class="text-center"><span><strong>0.00000000</strong><br></span></h1>
-                            <h6 class="text-center"><strong>DMH </strong>Balance&nbsp;<span><strong>0.00000000</strong><br></span></h6>
-                            <p class="text-center"><strong>DMH&nbsp;</strong>Staked&nbsp;</p>
-                            <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" type="button" style="height: 45px;margin-right: 5px;"><strong>Staked</strong></button><input type="text" class="inputBuy text-center" style="height: 44px;padding-top: 0px;"><button class="btn btn-primary button"
+                            <h1 class="display-4 text-center card-title">🔮<br></h1>
+                            <h1 class="text-center"><span><strong id="stakedBalance">0.00000000</strong><br></span></h1>
+                            <p class="text-center"><strong>PEARL&nbsp;</strong>Staked&nbsp;</p>
+                            <h6 class="text-center"><strong>PEARL </strong>Balance&nbsp;<span><strong id="tokenBalance">0.00000000</strong><br></span></h6>
+                            <p class="text-center" style="margin-bottom: 19px;"><button id="stake" class="btn btn-primary button" type="button" style="height: 45px;margin-right: 5px;"><strong>Stake</strong></button><input id="tokenAmount" type="text" class="inputBuy text-center" style="height: 44px;padding-top: 0px;"><button id="unstake" class="btn btn-primary button"
                                     type="button" style="height: 44px;margin-left: 5px;"><strong>UnStake</strong></button></p>
                             <p class="text-center"></p>
                         </div>
@@ -55,6 +55,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="tweb_pearl.js"></script>
 </body>
 
 </html>
