--- a/index2.html
+++ b/index2.html
@@ -55,7 +55,7 @@
         </div>
     </div>
     <div style="padding-top: 8px;padding-bottom: 0px;">
-        <p class="text-center" style="color: rgb(0,0,0);"><strong>DMH Token Address: "</strong><a id="Token-address" href="https://tronscan.org/#/token20/TokenAddress"><strong>Coming Soon</strong></a><strong>"</strong></p>
+        <p class="text-center" style="color: rgb(0,0,0);"><strong>DMH Token Address: "</strong><a id="Token-address" href="https://tronscan.org/#/contract/TEi2irLYbjrYNRU1YzUszwj3KmZtTHXjmi/code"><strong>TEi2irLYbjrYNRU1YzUszwj3KmZtTHXjmi</strong></a><strong>"</strong></p>
     </div>
     <div style="margin-top: 32px;">
         <div class="container">
