--- a/presale.html
+++ b/presale.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="text-left"><img src="assets/img/1044722.png" style="width: 50px;"><a class="navbar-brand text-left" href="#" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
             <div><a class="topbar trade" href="index.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade display" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="presale.html"
-                    style="padding: 8px 18px;color: rgb(240,156,14);"><strong>Presale</strong></a><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>About DMFI</strong></a></div>
+                    style="padding: 8px 18px;color: rgb(240,156,14);"><strong>Presale</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589" style="padding: 8px 18px;"><strong>About DMH</strong></a></div>
             <div><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>Coming Soon</strong></a></div>
         </div>
     </nav>
