--- a/universeOFFLINE.html
+++ b/universeOFFLINE.html
@@ -14,9 +14,11 @@
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(40,38,51);">
         <div class="container">
             <div class="text-left"><img src="assets/img/1044722.png" style="width: 50px;"><a class="navbar-brand text-left" href="#" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
-            <div><a class="topbar trade" href="index.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade active" href="universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="Presale.html"
-                    style="padding: 8px 18px;"><strong>Presale</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589" style="padding: 8px 18px;"><strong>About DMH</strong></a></div>
-            <div><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>Coming Soon</strong></a></div>
+            <div><a class="topbar Home" href="Index" style="padding: 8px 17px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="presale.html" style="padding: 8px 18px;"><strong>Presale</strong></a>
+                <a
+                    class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589" style="padding: 8px 18px;"><strong>About DMH</strong></a>
+            </div>
+            <div><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>Just.Swap Coming Soon</strong></a></div>
         </div>
     </nav>
     <div style="margin-top: 32px;">
@@ -28,39 +30,39 @@
                             <h1 class="text-center card-title">🔮<br></h1>
                             <h3 class="text-center white" id="w">PEARL</h3>
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>PEARL</strong></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>2500 DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Contract Source Code</a></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" href="PearlStake.html"><strong>Stake</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="text-center card-title">🍉<br></h1>
-                            <h3 class="text-center white" id="w">TAI</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>TAI</strong></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>2500 DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Contract Source Code</a></p>
+                            <h1 class="text-center card-title"><img src="assets/img/SUNLogo.178d4636.png" style="width: 37px;"><br></h1>
+                            <h3 class="text-center white" id="w">Sun</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Sun</strong></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" href="TaiStake.html"><strong>Stake</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="text-center card-title"><img src="assets/img/just_icon.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">JST</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>JST</strong></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>1500 DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Contract Source Code</a></p>
+                            <h1 class="text-center card-title"><img src="assets/img/1044722.png" style="width: 37px;"><br></h1>
+                            <h3 class="text-center white" id="w">Dark Matter TRX-LP</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>DMH TRX-LP</strong></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="JSTStake.html"><strong>Stake</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
@@ -73,42 +75,42 @@
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="text-center card-title"><img src="assets/img/SUNLogo.178d4636.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">SUN</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>SUN</strong></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>1000 DMH</strong></p>
+                            <h1 class="text-center card-title"><img src="assets/img/Coming-Soon-Icon.png" style="width: 37px;"><br></h1>
+                            <h3 class="text-center white" id="w">Coming soon</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake&nbsp;<strong>Coming soon</strong><br></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" href="SUNStake.html"><strong>Stake</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake</strong></a></h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="text-center card-title"><img src="assets/img/usdj.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">UsdJ</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>UsdJ</strong></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>1000 DMH</strong></p>
+                            <h1 class="text-center card-title"><img src="assets/img/Coming-Soon-Icon.png" style="width: 37px;"><br></h1>
+                            <h3 class="text-center white" id="w">Coming soon</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake&nbsp;<strong>Coming soon</strong><br></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn X<strong>&nbsp;DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Cooming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" href="USDJStake.html"><strong>Stake</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake</strong></a></h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="text-center card-title"><img src="assets/img/TNUC9Qb1rRpS5CbWLmNMxXBjyFoydXjWFR.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w"><strong>wTRX</strong><br></h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>wTRX</strong></p>
-                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>500 DMH</strong></p>
+                            <h1 class="text-center card-title"><img src="assets/img/Coming-Soon-Icon.png" style="width: 37px;"><br></h1>
+                            <h3 class="text-center white" id="w">Coming soon</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Coming soon</strong></p>
+                            <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Cooming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" href="wTrxStake.html"><strong>Stake</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake</strong></a></h3>
                         </div>
                     </div>
                 </div>
