--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </div>
             </div>
         </div>
-        <div id="installmetamask" style="color:Red; display:block;"> <p class="mbr-text text1 text-aling pt-2 mbr-light mbr-fonts-style display-5">
+        <div id="installmetamask" style="color:Red; display:block;"> <p class="mbr-text text1 text-aling pt-2 mbr-light mbr-fonts-style display-5"> <div/>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
