--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             <h3 class="text-center white" id="w">Coming soon</h3>
                             <p class="text-center white" style="margin-bottom: 4px;">Stake&nbsp;<strong>Coming soon</strong><br></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn X<strong>&nbsp;DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Cooming Soon</a></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake</strong></a></h3>
@@ -143,7 +143,7 @@
                             <h3 class="text-center white" id="w">Coming soon</h3>
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Coming soon</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Cooming Soon</a></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake</strong></a></h3>
