--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a
                     class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589" style="padding: 8px 18px;"><strong>About DMH</strong></a>
             </div>
-            <div><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>Just.Swap Coming Soon</strong></a></div>
+            <div><a class="topbar trade" href="https://justswap.io/?lang=en-US#/scan/detail/trx/TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW" style="padding: 8px 18px;"><strong>Just.Swap</strong></a></div>
         </div>
     </nav>
     <div class="text-center" style="padding-top: 50px;"><img src="assets/img/1044722.png" style="width: 100px;"></div>
