--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Dark Matter Harvest</title>
+    <title>JermyHarvester</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -14,10 +14,7 @@
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(40,38,51);">
         <div class="container">
             <div class="text-left"><img src="assets/img/1044722.png" style="width: 50px;"><a class="navbar-brand text-left" href="#" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
-            <div><a class="topbar Home" href="Index" style="padding: 8px 17px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="presale.html" style="padding: 8px 18px;"><strong>Presale</strong></a>
-                <a
-                    class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589" style="padding: 8px 18px;"><strong>About DMH</strong></a>
-            </div>
+            <div><a class="topbar Home" href="Index" style="padding: 8px 17px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589" style="padding: 8px 18px;"><strong>About DMH</strong></a></div>
             <div><a class="topbar trade" href="https://justswap.io/?lang=en-US#/scan/detail/trx/TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW" style="padding: 8px 18px;"><strong>Just.Swap</strong></a></div>
         </div>
     </nav>
@@ -44,7 +41,7 @@
                                     <p class="text-center white" style="margin-top: -5px;"><strong>DMH Total Supply</strong></p>
                                 </div>
                                 <div class="col-md-4">
-                                    <h1 class="text-center white" style="height: 75px;margin-top: 10px;"><span id="balof">NaN</span></h1>
+                                    <h1 class="text-center white" style="height: 75px;margin-top: 10px;"><span id="Mybal">NaN</span></h1>
                                     <p class="text-center white" style="margin-top: -5px;"><strong>My DMH Balance</strong></p>
                                 </div>
                             </div>
@@ -55,7 +52,7 @@
         </div>
     </div>
     <div style="padding-top: 8px;padding-bottom: 0px;">
-        <p class="text-center" style="color: rgb(0,0,0);"><strong>DMH Token Address: "</strong><a id="Token-address" href="https://tronscan.io/#/token20/TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW"><strong>TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW</strong></a><strong>"</strong></p>
+        <p class="text-center" style="color: rgb(0,0,0);"><strong>DMH Token Address: "</strong><a id="Token-address" href="https://tronscan.io/#/token20/TEi2irLYbjrYNRU1YzUszwj3KmZtTHXjmi"><strong>TEi2irLYbjrYNRU1YzUszwj3KmZtTHXjmi</strong></a><strong>"</strong></p>
     </div>
     <div style="margin-top: 32px;">
         <div class="container">
