--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <p class="text-center white" style="margin-top: -5px;"><strong>DMH Total Supply</strong></p>
                                 </div>
                                 <div class="col-md-4">
-                                    <h1 class="text-center white" style="height: 75px;margin-top: 10px;"><span id="Mybal">NaN</span></h1>
+                                    <h1 class="text-center white" style="height: 75px;margin-top: 10px;"><span id="balof">NaN</span></h1>
                                     <p class="text-center white" style="margin-top: -5px;"><strong>My DMH Balance</strong></p>
                                 </div>
                             </div>
