--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div style="padding-top: 8px;padding-bottom: 0px;">
-        <p class="text-center" style="color: rgb(0,0,0);"><strong>DMH Token Address: "</strong><a id="Token-address" href="https://tronscan.io/#/token20/TEi2irLYbjrYNRU1YzUszwj3KmZtTHXjmi"><strong>TEi2irLYbjrYNRU1YzUszwj3KmZtTHXjmi</strong></a><strong>"</strong></p>
+        <p class="text-center" style="color: rgb(0,0,0);"><strong>DMH Token Address: "</strong><a id="Token-address" href="https://tronscan.io/#/token20/TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW"><strong>TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW</strong></a><strong>"</strong></p>
     </div>
     <div style="margin-top: 32px;">
         <div class="container">
@@ -75,8 +75,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h1 class="text-center card-title"><img src="assets/img/SUNLogo.178d4636.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">Sun</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Sun</strong></p>
+                            <h3 class="text-center white" id="w">Sun Sun TRX-LP</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Sun TRX-LP</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
