--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h1 class="text-center card-title"><img src="assets/img/SUNLogo.178d4636.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">Sun Sun TRX-LP</h3>
+                            <h3 class="text-center white" id="w">Sun TRX-LP</h3>
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Sun TRX-LP</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
