--- a/PearlStake.html
+++ b/PearlStake.html
@@ -14,38 +14,39 @@
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(40,38,51);">
         <div class="container">
             <div class="text-left"><img src="assets/img/1044722.png" style="width: 50px;"><a class="navbar-brand text-left" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
-            <div><a class="topbar trade" href="index.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="Presale.html"
-                    style="padding: 8px 18px;"><strong>Presale</strong></a><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>About DMFI</strong></a></div>
+            <div><a class="topbar trade" href="index.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>About DMFI</strong></a></div>
             <div><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>Coming Soon</strong></a></div>
         </div>
     </nav>
     <div class="text-center" style="padding-top: 50px;">
-        <h1 class="display-2 text-center">🔮<br></h1>
-        <h1><strong>PEARL</strong></h1>
+        <h1 class="display-2 text-center"><img src="assets/img/1044722.png" style="width: 75px;"><br></h1>
+        <h1><strong>DMH Trx-LP</strong></h1>
     </div>
-    <h3 class="text-center">Stake <strong>PEARL </strong>and earn <strong>DMH</strong></h3>
+    <h3 class="text-center">Stake <strong>DMH Trx-lp&nbsp;</strong>and earn <strong>DMH</strong></h3>
     <div>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 52px;"><br></h1>
-                            <h1 class="text-center"><span><strong id="rewards">0.00000000</strong><br></span></h1>
-                            <p class="text-center" style="margin-bottom: 46px;"><strong>DHM </strong>Earned so far</p>
-                            <p class="text-center"><button id="harvest" class="btn btn-primary button" type="button" style="height: 45px;"><strong>Harvest</strong></button></p>
+                            <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 75px;"><br></h1>
+                            <h1 class="text-center"><span id="rewards"><strong>NaN</strong><br></span></h1>
+                            <p class="text-center" style="margin-bottom: 46px;"><strong>DMH&nbsp;</strong>Earned so far</p>
+                            <p class="text-center"><button class="btn btn-primary button" id="harvest" type="button" style="height: 45px;"><strong>Harvest</strong></button></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="display-4 text-center card-title">🔮<br></h1>
-                            <h1 class="text-center"><span><strong id="stakedBalance">0.00000000</strong><br></span></h1>
-                            <p class="text-center"><strong>PEARL&nbsp;</strong>Staked&nbsp;</p>
-                            <h6 class="text-center"><strong>PEARL </strong>Balance&nbsp;<span><strong id="tokenBalance">0.00000000</strong><br></span></h6>
-                            <p class="text-center" style="margin-bottom: 19px;"><button id="stake" class="btn btn-primary button" type="button" style="height: 45px;margin-right: 5px;"><strong>Stake</strong></button><input id="tokenAmount" type="text" class="inputBuy text-center" style="height: 44px;padding-top: 0px;"><button id="unstake" class="btn btn-primary button"
-                                    type="button" style="height: 44px;margin-left: 5px;"><strong>UnStake</strong></button></p>
+                            <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 75px;"><br></h1>
+                            <h1 class="text-center"><span id="stakedBalance"><strong>NaN</strong><br></span></h1>
+                            <h6 class="text-center"><strong>DMH Trx-LP&nbsp;</strong>staked</h6>
+                            <p class="text-center"><strong>DMH Trx-LP&nbsp;</strong>Staked&nbsp;<span id="tokenBalance">NaN</span></p>
+                            <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" id="stake" type="button" style="height: 45px;margin-right: 5px;"><strong>Staked</strong></button><input type="text" id="tokenAmount" class="inputBuy text-center" style="height: 44px;padding-top: 0px;">
+                                <button
+                                    class="btn btn-primary button" id="unstake" type="button" style="height: 44px;margin-left: 5px;"><strong>UnStake</strong></button>
+                            </p>
                             <p class="text-center"></p>
                         </div>
                     </div>
