--- a/SUNStake.html
+++ b/SUNStake.html
@@ -14,38 +14,40 @@
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(40,38,51);">
         <div class="container">
             <div class="text-left"><img src="assets/img/1044722.png" style="width: 50px;"><a class="navbar-brand text-left white" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
-            <div><a class="topbar trade" href="index.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="presale.html"
-                    style="padding: 8px 18px;"><strong>Presale</strong></a><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>About DMFI</strong></a></div>
-            <div><a class="topbar trade" href="#" style="padding: 8px 18px;"><strong>Coming Soon</strong></a></div>
+            <div><a class="topbar trade" href="index.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589"
+                    style="padding: 8px 18px;"><strong>About DMFI</strong></a></div>
+            <div><a class="topbar trade" href="https://justswap.io/?lang=en-US#/scan/detail/trx/TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW" style="padding: 8px 18px;"><strong>Just.Swap</strong></a></div>
         </div>
     </nav>
     <div class="text-center" style="padding-top: 50px;">
         <h1 class="display-2 text-center"><img src="assets/img/SUNLogo.178d4636.png"><br></h1>
-        <h1><strong>SUN</strong></h1>
+        <h1><strong>SUN Trx-LP</strong></h1>
     </div>
-    <h3 class="text-center">Stake <strong>SUN&nbsp;</strong>and earn <strong>DMH</strong></h3>
+    <h3 class="text-center">Stake <strong>SUN Trx-LP&nbsp;</strong>and earn <strong>DMH</strong></h3>
     <div>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="display-4 text-center card-title"><img src="assets/img/SUNLogo.178d4636.png" style="width: 75px;"><br></h1>
-                            <h1 class="text-center"><span><strong>0.00000000</strong><br></span></h1>
-                            <p class="text-center" style="margin-bottom: 46px;"><strong>SUN&nbsp;</strong>Earned so far</p>
-                            <p class="text-center"><button class="btn btn-primary button" type="button" style="height: 45px;"><strong>Harvest</strong></button></p>
+                            <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 75px;"><br></h1>
+                            <h1 class="text-center"><span id="rewards"><strong>0.00000000</strong><br></span></h1>
+                            <p class="text-center" style="margin-bottom: 46px;"><strong>DMH&nbsp;</strong>Earned so far</p>
+                            <p class="text-center"><button class="btn btn-primary button" id="harvest" type="button" style="height: 45px;"><strong>Harvest</strong></button></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 75px;"><br></h1>
-                            <h1 class="text-center"><span><strong>0.00000000</strong><br></span></h1>
-                            <h6 class="text-center"><strong>DMH </strong>Balance&nbsp;<span><strong>0.00000000</strong><br></span></h6>
-                            <p class="text-center"><strong>DMH&nbsp;</strong>Staked&nbsp;</p>
-                            <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" type="button" style="height: 45px;margin-right: 5px;"><strong>Staked</strong></button><input type="text" class="inputBuy text-center" style="height: 44px;padding-top: 0px;"><button class="btn btn-primary button"
-                                    type="button" style="height: 44px;margin-left: 5px;"><strong>UnStake</strong></button></p>
+                            <h1 class="display-4 text-center card-title"><img src="assets/img/SUNLogo.178d4636.png" style="width: 75px;"><br></h1>
+                            <h1 class="text-center"><span id="stakedBalance"><strong>0.00000000</strong><br></span></h1>
+                            <h6 class="text-center"><strong>Sun Trx-LP Staked</strong></h6>
+                            <p class="text-center"><strong>Sun Trx-LP Balance</strong></p>
+                            <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" id="stake" type="button" style="height: 45px;margin-right: 5px;"><strong>Staked</strong></button><input type="text" id="tokenAmount" class="inputBuy text-center" style="height: 44px;padding-top: 0px;">
+                                <button
+                                    class="btn btn-primary button" id="unstake" type="button" style="height: 44px;margin-left: 5px;"><strong>UnStake</strong></button>
+                            </p>
                             <p class="text-center"></p>
                         </div>
                     </div>
@@ -55,6 +57,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+     <script src="tweb_sun.js"></script>
 </body>
 
 </html>
