--- a/SUNStake.html
+++ b/SUNStake.html
@@ -31,7 +31,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h1 class="display-4 text-center card-title"><img src="assets/img/1044722.png" style="width: 75px;"><br></h1>
-                            <h1 class="text-center"><span id="rewards"><strong>0.00000000</strong><br></span></h1>
+                            <h1 class="text-center"><span id="rewards"><strong>NaN</strong><br></span></h1>
                             <p class="text-center" style="margin-bottom: 46px;"><strong>DMH&nbsp;</strong>Earned so far</p>
                             <p class="text-center"><button class="btn btn-primary button" id="harvest" type="button" style="height: 45px;"><strong>Harvest</strong></button></p>
                         </div>
@@ -41,9 +41,9 @@
                     <div class="card">
                         <div class="card-body">
                             <h1 class="display-4 text-center card-title"><img src="assets/img/SUNLogo.178d4636.png" style="width: 75px;"><br></h1>
-                            <h1 class="text-center"><span id="stakedBalance"><strong>0.00000000</strong><br></span></h1>
+                            <h1 class="text-center"><span id="stakedBalance"><strong>NaN</strong><br></span></h1>
                             <h6 class="text-center"><strong>Sun Trx-LP Staked</strong></h6>
-                            <p class="text-center"><strong>Sun Trx-LP Balance</strong></p>
+                            <p class="text-center"><strong>Sun Trx-LP Balance&nbsp;</strong><span id="tokenBalance">NaN</span></p>
                             <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" id="stake" type="button" style="height: 45px;margin-right: 5px;"><strong>Staked</strong></button><input type="text" id="tokenAmount" class="inputBuy text-center" style="height: 44px;padding-top: 0px;">
                                 <button
                                     class="btn btn-primary button" id="unstake" type="button" style="height: 44px;margin-left: 5px;"><strong>UnStake</strong></button>
@@ -57,7 +57,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-     <script src="tweb_sun.js"></script>
+        <script src="tweb_sun.js"></script>
 </body>
 
 </html>
