--- a/universe.html
+++ b/universe.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Dark Matter Harvest</title>
+    <title>JermyHarvester</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -14,7 +14,8 @@
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(40,38,51);">
         <div class="container">
             <div class="text-left"><img src="assets/img/1044722.png" style="width: 50px;"><a class="navbar-brand text-left" href="#" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
-            <div><a class="topbar Home" href="Index" style="padding: 8px 17px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589" style="padding: 8px 18px;"><strong>About DMH</strong></a></div>
+            <div><a class="topbar trade" href="home.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589"
+                    style="padding: 8px 18px;"><strong>About DMH</strong></a></div>
             <div><a class="topbar trade" href="https://justswap.io/?lang=en-US#/scan/detail/trx/TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW" style="padding: 8px 18px;"><strong>Just.Swap</strong></a></div>
         </div>
     </nav>
@@ -24,9 +25,9 @@
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="text-center card-title">🔮<br></h1>
-                            <h3 class="text-center white" id="w">PEARL</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>PEARL</strong></p>
+                            <h1 class="text-center card-title"><img src="assets/img/Vvp2u3h.png" style="width: 37px;"><br></h1>
+                            <h3 class="text-center white" id="w">TewKen</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>TewKen</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
@@ -39,13 +40,13 @@
                     <div class="card">
                         <div class="card-body">
                             <h1 class="text-center card-title"><img src="assets/img/SUNLogo.178d4636.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">Sun TRX-LP</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Sun TRX-LP</strong></p>
+                            <h3 class="text-center white" id="w">Sun</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Sun</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
@@ -59,7 +60,7 @@
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
@@ -72,14 +73,15 @@
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="text-center card-title"><img src="assets/img/Coming-Soon-Icon.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">Coming soon</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake&nbsp;<strong>Coming soon</strong><br></p>
+                            <h1 class="text-center card-title"><img src="assets/img/transparentlogo.png" style="width: 37px;"><br></h1>
+                            <h3 class="text-center white" id="w">Frag</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake&nbsp;<strong>Frag</strong><br></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake</strong></a></h3>
+                            <h3 class="text-center" href="test"></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
@@ -93,21 +95,22 @@
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card">
                         <div class="card-body">
-                            <h1 class="text-center card-title"><img src="assets/img/Coming-Soon-Icon.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">Coming soon</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Coming soon</strong></p>
+                            <h1 class="text-center card-title"><img src="assets/img/voidlogo2.png" style="width: 37px;"><br></h1>
+                            <h3 class="text-center white" id="w">Void</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Void</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Cooming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Stake</strong></a></h3>
+                            <h3 class="text-center" href="test"></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="#"><strong>Coming Soon</strong></a></h3>
                         </div>
                     </div>
                 </div>
