--- a/universe.html
+++ b/universe.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-light navbar-expand-md navigation-clean-button" style="background-color: rgb(40,38,51);">
         <div class="container">
             <div class="text-left"><img src="assets/img/1044722.png" style="width: 50px;"><a class="navbar-brand text-left" href="#" style="color: rgb(255,255,255);">&nbsp;DMH Farmer</a></div>
-            <div><a class="topbar trade" href="home.html" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589"
+            <div><a class="topbar trade" href="index" style="padding: 8px 18px;"><strong>Home</strong></a><a class="topbar trade" href="Universe.html" style="padding: 8px 18px;"><strong>Universe</strong></a><a class="topbar trade" href="https://medium.com/@unitydapp/dark-matter-harvest-479e108e1589"
                     style="padding: 8px 18px;"><strong>About DMH</strong></a></div>
             <div><a class="topbar trade" href="https://justswap.io/?lang=en-US#/scan/detail/trx/TGAuyPkfBYfA8ZVEQqboaNK1iStJokgnnW" style="padding: 8px 18px;"><strong>Just.Swap</strong></a></div>
         </div>
