--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h1 class="text-center card-title"><img src="assets/img/Vvp2u3h.png" style="width: 37px;"><br></h1>
-                            <h3 class="text-center white" id="w">TewKen</h3>
-                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>TewKen</strong></p>
+                            <h3 class="text-center white" id="w">Tewken</h3>
+                            <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Tewken</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
