--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <h3 class="text-center white" id="w">Void</h3>
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Void</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>X DMH</strong></p>
-                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Cooming Soon</a></p>
+                            <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="#" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"></h3>
