--- a/universe.html
+++ b/universe.html
@@ -46,7 +46,7 @@
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TUzSPnHR66yPj4Qc4KzKnaDqDp67jqDfJn" style="margin-bottom: 32px;">Coming Soon</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="sunstake" href="#"><strong>Stake Soon</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="sunstake" href="sunstake"><strong>Stake</strong></a></h3>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TKV1ZampzDNaWtLwH31BkcKB4GyCwK8Pjc/code" style="margin-bottom: 32px;">Open Source</a></p>
                             <p class="text-center"><span id="RdyharvestPool1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
                             <p class="text-center"></p>
-                            <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="dmhstake"><strong>Stake Soon</strong></a></h3>
+                            <h3 class="text-center" href="test"><a class="text-center Stake" id="dmhstake" href="dmhstake"><strong>Stake</strong></a></h3>
                         </div>
                     </div>
                 </div>
