--- a/SUNStake.html
+++ b/SUNStake.html
@@ -44,7 +44,7 @@
                             <h1 class="text-center"><span id="stakedBalance"><strong>NaN</strong><br></span></h1>
                             <h6 class="text-center"><strong>Sun Trx-LP Staked</strong></h6>
                             <p class="text-center"><strong>Sun Trx-LP Balance&nbsp;</strong><span id="tokenBalance">NaN</span></p>
-                            <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" id="stake" type="button" style="height: 45px;margin-right: 5px;"><strong>Staked</strong></button><input type="text" id="tokenAmount" class="inputBuy text-center" style="height: 44px;padding-top: 0px;">
+                            <p class="text-center" style="margin-bottom: 19px;"><button class="btn btn-primary button" id="stake" type="button" style="height: 45px;margin-right: 5px;"><strong>Stake</strong></button><input type="text" id="tokenAmount" class="inputBuy text-center" style="height: 44px;padding-top: 0px;">
                                 <button
                                     class="btn btn-primary button" id="unstake" type="button" style="height: 44px;margin-left: 5px;"><strong>UnStake</strong></button>
                             </p>
