--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Tewken</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>750 DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TNt2fqwH7kC7WUTnSYTTpoe3obTXBnYdFr" style="margin-bottom: 32px;">Open Source</a></p>
-                            <p class="text-center"><strong><span class="Harvest" id="reward2">0.00000</span> DMH ready to be harvested</strong></p>
+                            <p class="text-center"><strong><span class="Harvest" id="rewards2">0.00000</span> DMH ready to be harvested</span></strong></p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="tewkenstake"><strong>Stake</strong></a></h3>
                         </div>
