--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <h1 class="text-center"><img src="assets/img/1044722.png" style="width: 75px;"><span class="text-center white"><strong>&nbsp;5,000.000</strong></span></h1>
+                                    <h1 class="text-center"><img src="assets/img/1044722.png" style="width: 75px;"><span class="text-center white"><strong>&nbsp;12,000.000</strong></span></h1>
                                     <p class="text-center white"><strong>DMH Circulated Supply</strong></p>
                                 </div>
                                 <div class="col-md-4">
@@ -66,7 +66,7 @@
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Tewken</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>750 DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TNt2fqwH7kC7WUTnSYTTpoe3obTXBnYdFr" style="margin-bottom: 32px;">Open Source</a></p>
-                            <p class="text-center"><strong><span class="Harvest" id="rewards2">0.00000DMH ready to be harvested</span></strong></p>
+                            <p class="text-center"><strong><span class="Harvest" id="rewards2">0.00000</span> DMH ready to be harvested</strong></p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="tewkenstake"><strong>Stake</strong></a></h3>
                         </div>
@@ -80,7 +80,7 @@
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>Sun Trx-LP</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>750 DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TUzSPnHR66yPj4Qc4KzKnaDqDp67jqDfJn" style="margin-bottom: 32px;">Open Source</a></p>
-                            <p class="text-center"><span id="rewards1" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
+                            <p class="text-center"><span id="rewards1" class="Harvest"><strong>0.00000</span> DMH ready to be harvested</span></p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="sunstake"><strong>Stake</strong></a></h3>
                         </div>
@@ -94,7 +94,7 @@
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>DMH TRX-LP</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>5000 DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TKV1ZampzDNaWtLwH31BkcKB4GyCwK8Pjc/code" style="margin-bottom: 32px;">Open Source</a></p>
-                            <p class="text-center"><span id="rewards0" class="Harvest"><strong>0.00000 DMH ready to be harvested</strong></span></p>
+                            <p class="text-center"><span id="rewards0" class="Harvest"><strong>0.00000</span> DMH ready to be harvested</span></p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="dmhstake"><strong>Stake</strong></a></h3>
                         </div>
