--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <p class="text-center white" style="margin-bottom: 4px;">Stake <strong>DMH TRX-LP</strong></p>
                             <p class="text-center white" style="margin-bottom: 4px;">Earn <strong>5000 DMH</strong></p>
                             <p class="text-center white" style="margin-bottom: 32px;"><a id="CotractSourcode" href="https://tronscan.io/#/contract/TKV1ZampzDNaWtLwH31BkcKB4GyCwK8Pjc/code" style="margin-bottom: 32px;">Open Source</a></p>
-                            <p class="text-center"><span id="rewards0" class="Harvest"><strong>0.00000</span> DMH ready to be harvested</span></p>
+                            <p class="text-center"><span id="rewards0" class="Harvest"><strong>0.00000</span> DMH ready to be harvested</p>
                             <p class="text-center"></p>
                             <h3 class="text-center" href="test"><a class="text-center Stake" id="w" href="dmhstake"><strong>Stake</strong></a></h3>
                         </div>
