--- a/TopiaStake.html
+++ b/TopiaStake.html
@@ -56,7 +56,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
-    <script src="tweb_Frag.js"></script>
+    <script src="tweb_Topia.js"></script>
 </body>
 
 </html>
